# templates

./: README.md
c-project/: Makefile
cpp-project/: .gitignore  CMakeLists.txt  justfile
cpp-project/include/: example.hpp
cpp-project/src/: example.cpp  main.cpp
java-file/: Main.java  justfile
java8-justfile/: justfile
maven/: justfile  pom.xml
sfml-project/: CMakeLists.txt  justfile
sfml-project/src/: example.cpp  main.cpp
